5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/2360/executions/1578_1334.log
== TEST (2019-03-27 18:50:32) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", ...)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  Ellipsis
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:50:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", ...)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  Ellipsis
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:50:45) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", ...)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  Ellipsis
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:50:58) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 8)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.201598
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:51:13) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 18:52:15) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 16 // 2)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.200861
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:52:17) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 16 // 2)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:56:24) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:56:52) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", )

print("Potenciacao: ", 2 ** 2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 18:57:00) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", )

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto: 
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:00:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 + 1 = 9)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.155157
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 9
    print("Resto: ", 8 + 1 = 9)
                    ^
SyntaxError: keyword can't be an expression

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:00:50) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 + 1 = 9)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 8 + 1 = 9)
                    ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:00:56) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 8 + 1 = 9)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 8 + 1 = 9)
                    ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:02:17) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 9 * 9 + 8 = 81)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 9 * 9 + 8 = 81)
                    ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:02:18) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 9 * 9 + 8 = 81)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 9 * 9 + 8 = 81)
                    ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:04:34) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 9 * 9 + 8 = 81)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 9 * 9 + 8 = 81)
                    ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:04:35) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 9 * 9 + 8 = 81)

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 9 * 9 + 8 = 81)
                    ^
SyntaxError: keyword can't be an expression
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:06:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 9 * 9 + 8 (= 81))

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 9 * 9 + 8 (= 81))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:06:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", 9 * 9 + 8 (= 81))

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 9 * 9 + 8 (= 81))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:06:43) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 9 * 9 + 8 (= 81))

print("Potenciacao: ", 2 ** 3)
-- ERROR:
File "XXXX", line 9
    print("Resto: ", 9 * 9 + 8 (= 81))
                                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:08:14) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 4 * (5 % 3))

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:08:20) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 4 * (5 % 3))

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.159158
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:08:26) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 4 * (5 % 3))

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:08:38) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 4 * (5 % 3))

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:08:40) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 4 * (5 % 3))

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:09:04) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 4 * (5 % 3))

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:10:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 4 * (5 % 3))

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.138315
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:10:48) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", 4 * (5 % 3))

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:23:34) 
-- CODE:
adicao = 8
print("adicao")
-- OUTPUT:
adicao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:23:48) 
-- CODE:
adicao = 8
print("adicao, adicao")
-- OUTPUT:
adicao, adicao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:23:58) 
-- CODE:
adicao = 8
print("adicao, 8")
-- OUTPUT:
adicao, 8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:24:06) 
-- CODE:
adicao = 8
print("adicao")
-- OUTPUT:
adicao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:24:29) 
-- CODE:
adicao = 5 + 3
print("adicao")
-- OUTPUT:
adicao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:30:29) 
-- CODE:
adicao = 5 + 3
print("adicao"
-- ERROR:
File "XXXX", line 3
    
                  ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:30:29) 
-- CODE:
adicao = 5 + 3
print("adicao"
-- EXECUTION TIME:
0.131016
-- ERROR:
  File "/home/codebench/codes/1578/1334/main.py", line 3
    
                  ^
SyntaxError: unexpected EOF while parsing

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:31:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:31:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:31:51) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:32:42) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print(" Multiplicacao: ", 2 * 4)

print
-- OUTPUT:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:33:27) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 10 - 2)
print(" Multiplicacao: ", 2 * 4)
print("divisao: ", 16 // 2)
-- OUTPUT:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:35:59) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 10 - 2)
print(" Multiplicacao: ", 2 * 4)
print("divisao: ", 16 // 2)
print (" 4 * (5 % 3)")
-- OUTPUT:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
 4 * (5 % 3)
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:36:27) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 10 - 2)
print(" Multiplicacao: ", 2 * 4)
print("divisao: ", 16 // 2)
print ("resto: ",4 * (5 % 3)")
-- ERROR:
File "XXXX", line 5
    print ("resto: ",4 * (5 % 3)")
                                 ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:37:23) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 10 - 2)
print(" Multiplicacao: ", 2 * 4)
print("divisao: ", 16 // 2)
print ("resto: ", 5+ 3")
-- ERROR:
File "XXXX", line 5
    print ("resto: ", 5+ 3")
                           ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:39:57) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 10 - 2)
print(" Multiplicacao: ", 2 * 4)
print("divisao: ", 16 // 2)
print ("resto: ", (5 % 3) * 4)
print
-- OUTPUT:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
resto:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:40:33) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 10 - 2)
print(" Multiplicacao: ", 2 * 4)
print("divisao: ", 16 // 2)
print ("resto: ", (5 % 3) * 4)
print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.138416
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:40:43) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 10 - 2)
print(" Multiplicacao: ", 2 * 4)
print("divisao: ", 16 // 2)
print ("resto: ", (5 % 3) * 4)
print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:41:30) 
-- CODE:
print("Adicao: ", 5 + 3)
print("Subtracao: ", 10 - 2)
print(" Multiplicacao: ", 2 * 4)
print("divisao: ", 16 // 2)
print ("resto: ", (5 % 3) * 4)
print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:42:02) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print(" Multiplicacao: ", 2 * 4)

print("divisao: ", 16 // 2)

print ("resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.18976
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:42:37) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print(" Multiplicacao: ", 2 * 4)

print("divisao: ", 16 // 2)

print ("resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:42:44) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print(" Multiplicacao: ", 2 * 4)

print("divisao: ", 16 // 2)

print ("resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.143061
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:43:08) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print(" Multiplicacao: ", 2 * 4)

print("divisao: ", 16 // 2)

print ("resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
 Multiplicacao:  8
divisao:  8
resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:43:30) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("divisao: ", 16 // 2)

print ("resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.158339
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
divisao:  8
resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:43:43) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print ("Resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.157657
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:43:46) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print ("Resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.135418
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:43:59) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.144556
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:44:21) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.215783
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-27 19:44:22) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 // 2)

print("Resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- OUTPUT:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8
Resto:  8
Potenciacao:  8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-27 19:45:09) 
-- CODE:
print("Adicao: ", 5 + 3)

print("Subtracao: ", 10 - 2)

print("Multiplicacao: ", 2 * 4)

print("Divisao: ", 16 / 2)

print("Resto: ", (5 % 3) * 4)

print("Potenciacao: ", 2 ** 3)
-- EXECUTION TIME:
0.154969
-- TEST CASE 1:
---- input:
xxx
---- correct output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
---- user output:
Adicao:  8
Subtracao:  8
Multiplicacao:  8
Divisao:  8.0
Resto:  8
Potenciacao:  8
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
